--- a/src/gui/DepartmentView.fxml
+++ b/src/gui/DepartmentView.fxml
@@ -28,6 +28,7 @@
         <columns>
           <TableColumn fx:id="tableColumnId" prefWidth="100.0" text="Código" />
           <TableColumn fx:id="tableColumnName" prefWidth="150.0" text="Nome" />
+            <TableColumn fx:id="tableColumnEdit" prefWidth="56.66668701171875" />
         </columns>
       </TableView>
    </children>
