--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,26 +11,30 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="148.0" prefWidth="666.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SellerFormController">
+<AnchorPane prefHeight="308.0" prefWidth="688.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SellerFormController">
    <children>
-      <GridPane layoutY="11.0" prefHeight="124.0" prefWidth="612.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="11.0">
+      <GridPane layoutX="21.0" layoutY="11.0" prefHeight="251.0" prefWidth="611.0" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="11.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="160.33331298828125" minWidth="10.0" prefWidth="55.333326975504555" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="394.6666831970215" minWidth="10.0" prefWidth="271.3333396911621" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="369.0" minWidth="10.0" prefWidth="200.33329264322913" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="35.999989827473954" minHeight="10.0" prefHeight="31.333343505859375" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="31.000010172526032" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="45.66664632161459" minHeight="10.0" prefHeight="31.66666666666667" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="45.33331298828125" minHeight="5.0" prefHeight="30.000010172526046" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="48.33333079020181" minHeight="2.6666488647460938" prefHeight="31.333353678385407" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="48.33333079020181" minHeight="10.0" prefHeight="31.333353678385407" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="58.66668701171875" minHeight="10.0" prefHeight="47.33331298828125" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Label text="Código" />
             <Label text="Nome" GridPane.rowIndex="1" />
             <TextField fx:id="txtId" editable="false" GridPane.columnIndex="1" />
             <TextField fx:id="txtName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label fx:id="labelErrorName" prefHeight="17.0" prefWidth="187.0" textFill="#dd3308" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-            <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <Label fx:id="labelErrorName" prefHeight="17.0" prefWidth="229.0" textFill="#aa1d07" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
                   <Button fx:id="btnSave" mnemonicParsing="false" onAction="#onBtnSaveAction" text="Salvar" />
                   <Button fx:id="btnCancel" lineSpacing="4.0" mnemonicParsing="false" onAction="#onBtnCancelAction" text="Cancelar">
@@ -39,6 +44,16 @@
                   </Button>
                </children>
             </HBox>
+            <Label text="E-mail" GridPane.rowIndex="2" />
+            <Label text="Data Nasc." GridPane.rowIndex="3" />
+            <Label text="Salário Base" GridPane.rowIndex="4" />
+            <TextField fx:id="txtEmail" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="txtBaseSalary" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <DatePicker fx:id="dpBirthDate" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Departamento" GridPane.rowIndex="5" />
+            <Label fx:id="labelErrorEmail" prefHeight="17.0" prefWidth="226.0" textFill="#aa1d07" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+            <Label fx:id="labelErrorBirthDate" prefHeight="17.0" prefWidth="228.0" textFill="#aa1d07" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label fx:id="labelErrorBaseSalary" prefHeight="17.0" prefWidth="228.0" textFill="#aa1d07de" GridPane.columnIndex="2" GridPane.rowIndex="4" />
          </children>
       </GridPane>
    </children>
