--- a/src/gui/SellerView.fxml
+++ b/src/gui/SellerView.fxml
@@ -11,7 +11,7 @@
 
 <VBox prefHeight="448.0" prefWidth="854.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.SellerViewController">
    <children>
-      <Label text="Registro de Departamento">
+      <Label text="Registro de Vendedor">
          <font>
             <Font name="Arial Bold" size="12.0" />
          </font>
