--- a/src/gui/SellerForm.fxml
+++ b/src/gui/SellerForm.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -54,6 +55,7 @@
             <Label fx:id="labelErrorEmail" prefHeight="17.0" prefWidth="226.0" textFill="#aa1d07" GridPane.columnIndex="2" GridPane.rowIndex="2" />
             <Label fx:id="labelErrorBirthDate" prefHeight="17.0" prefWidth="228.0" textFill="#aa1d07" GridPane.columnIndex="2" GridPane.rowIndex="3" />
             <Label fx:id="labelErrorBaseSalary" prefHeight="17.0" prefWidth="228.0" textFill="#aa1d07de" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+            <ComboBox fx:id="cbDepartment" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
          </children>
       </GridPane>
    </children>
